--- a/brasfi-demo/src/main/resources/application.properties
+++ b/brasfi-demo/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=Brasfi Demo
+
+# Configuração do banco de dados PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/brasfi_db
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuração JPA
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Configuração de log
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
