--- a/brasfi-demo/src/main/resources/application.properties
+++ b/brasfi-demo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Brasfi Demo
 
 # Configuração do banco de dados PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/brasfi_db
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://ep-old-dust-acjhxmps-pooler.sa-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_6MsEUYR0GdzC&sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_6MsEUYR0GdzC
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuração JPA
