--- a/brasfi-demo/src/main/resources/application.properties
+++ b/brasfi-demo/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Configuração de log
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+#Testando
+spring.security.oauth2.resourceserver.jwt.enabled=false
